--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
+    </head>
+    <body>
     <header>
       <nav class="navbar fixed-top">
         <img
@@ -86,70 +86,103 @@
         <p>...And so much more!</p>
       </div>
     </section>
-    <div class="container">
-      <section class="gallery">
-        <h1>Here are some parrots!</h1>
 
-        <figure class="gal-item">
+  
+    <section class="gallery clearfix">
+      <div class="container">
+        <h1>Here are some parrots!</h1>
+      <div>
+        <div class="gal-item">
           <img src="/parrots/cockatiel1.png" alt="Cockatiel picture" />
-          <figcaption class="gallery-desc">
+          <div class="gallery-desc">
             <p>Cockatiels</p>
             <a href="" class="button button-color button-small"
-              >Learn more about Cockatiels</a
-            >
-          </figcaption>
-        </figure>
-
-        <figure class="gal-item">
+              >Learn more</a>
+          </div>
+        </div>
+  
+        <div class="gal-item">
           <img src="/parrots/budgie1.png" alt="Budgie picture" />
-          <figcaption class="gallery-desc">
+          <div class="gallery-desc">
             <p>Budgies</p>
             <a href="" class="button button-color button-small"
-              >Learn more about Budgies</a
-            >
-          </figcaption>
-        </figure>
-
-        <figure class="gal-item">
+              >Learn more</a>
+          </div>
+        </div>
+  
+        <div class="gal-item">
           <img src="/parrots/cockatoo1.png" alt="Cockatoo picture" />
-          <figcaption class="gallery-desc">
+          <div class="gallery-desc">
             <p>Cockatoos</p>
             <a href="" class="button button-color button-small"
-              >Learn more about Cockatoos</a
-            >
-          </figcaption>
-        </figure>
-
-        <figure class="gal-item">
+              >Learn more</a>
+          </div>
+        </div>
+  
+        <div class="gal-item">
           <img src="/parrots/ringneck1.png" alt="Ringneck picture" />
-          <figcaption class="gallery-desc">
+          <div class="gallery-desc">
             <p>Ringnecks</p>
             <a href="" class="button button-color button-small"
-              >Learn more about Ringnecks</a
-            >
-          </figcaption>
-        </figure>
-
-        <figure class="gal-item">
+              >Learn more</a>
+          </div>
+        </div>
+  
+        <div class="gal-item">
           <img src="/parrots/lovebird1.png" alt="Lovebird picture" />
-          <figcaption class="gallery-desc">
+          <div class="gallery-desc">
             <p>Lovebirds</p>
             <a href="" class="button button-color button-small"
-              >Learn more about Lovebirds</a
-            >
-          </figcaption>
-        </figure>
-
-        <figure class="gal-item">
+              >Learn more</a>
+          </div>
+        </div>
+        <div class="gal-item">
           <img src="/parrots/caique1.png" alt="Caique picture" />
-          <figcaption class="gallery-desc">
+          <div class="gallery-desc">
             <p>Caiques</p>
             <a href="" class="button button-color button-small"
-              >Learn more about Caiques</a
-            >
-          </figcaption>
-        </figure>
-      </section>
+              >Learn more</a>
+          </div>
+        </div>
+      </div>
     </div>
+    </section>
+
+  <section class = "birds-carousel"> 
+    <div class = "container">
+      <div class = "blocked">
+      <h1>Are you a parrot owner looking for supplies?</h1> 
+        <p>
+          We've got you covered. We make bird cages, toys, tools and other parrot-related things with passion and care.
+        </p>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class ="img-fluid" src="/parrots/toy1.jpeg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class ="img-fluid" src="/parrots/perch1.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class ="img-fluid" src="/parrots/cage1.png" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+    </div>
+  </section>
+  <a href = "#" class = "button button-color-dark">Our products</a>
   </body>
 </html>
