--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="/fonts/fontawesome-free-5.15.1-web/css/all.css" />
     <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
@@ -150,7 +151,7 @@
 
   <section class = "birds-carousel"> 
     <div class = "container">
-      <div class = "blocked">
+      <div>
       <h1>Are you a parrot owner looking for supplies?</h1> 
         <p>
           We've got you covered. We make bird cages, toys, tools and other parrot-related things with passion and care.
@@ -184,5 +185,29 @@
     </div>
   </section>
   <a href = "#" class = "button button-color-dark">Our products</a>
+  <section class="birds-visit">
+    <div class="container">
+      <h1>Come visit us!</h1>
+      <br>
+      <div class="row">
+        <div class="col-sm">
+          <p><i class="fas fa-kiwi-bird fa-2x"></i> <b>We're open on weekdays.</b> You can visit our feathered friends in person!</p>
+        </div>
+        <div class="col-sm">
+          <p><i class="fas fa-dove fa-2x"></i> <b>We are licensed breeders.</b> Think you are ready for a parrot? Adopt your new companion with us.</p>
+        </div>
+        <div class="col-sm">
+          <p><i class="fas fa-crow fa-2x"></i> <b>We offer assistance and support.</b> Are you a beginner at parrot care? Need some hands-on advice for equipment? We can help!</p>
+        </div>
+      </div>
+    </div>
+    </section>
+      <footer>
+        <p>
+          Hi, my name is Alex and I love birds. But parrots are my favorite
+          birds. But all birds are cool.
+        </p>
+        <a class="button-small" href="">Contact me!</a>
+      </footer>
   </body>
 </html>
